src/integration/snapshots/rustclean__integration__screens__deletion-log-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Deletion log  │  last 30 days: 4.5 GiB  │  6 items in all, 5.7 GiB
 2026-10-01   3 items, 4.2 GiB
   11:00     3.0 GiB  basket                   /Users/demo/Downloads/Xcode_16.xip
   10:00   409.6 MiB  report: Installers and … /Users/demo/Downloads/setup.dmg
   09:00   819.2 MiB  tool: npm cache          /Users/demo/.npm/_cacache
 2026-09-30   2 items, 307.2 MiB
   06:00   204.8 MiB  uninstall: Sketchpad     /Users/demo/Applications/Sketchpad.app
   06:00   102.4 MiB  uninstall: Sketchpad     …mo/Library/Application Support/com.example.sketchpad
 2026-08-29   1 item, 1.2 GiB
   04:00     1.2 GiB  list                     /Users/demo/Movies/old.mov

  The entries are in the trash: they can be restored from there until it is emptied.
















37 items scanned, 1.2 s   ⚠ 2 items inaccessible
 ?  help   ↑↓  scroll   r  refresh   m  menu   Esc  back   q  quit
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 0+11 Cyan/- BOLD | 11+19 Gray/-
 2: 0+8 Gray/- | 8+12 White/- | 20+26 Gray/- | 46+35 White/-
 3: 0+8 Gray/- | 8+12 White/- | 20+26 Gray/- | 46+32 White/-
 4: 0+8 Gray/- | 8+12 White/- | 20+26 Gray/- | 46+26 White/-
 5: 0+11 Cyan/- BOLD | 11+21 Gray/-
 6: 0+8 Gray/- | 8+12 White/- | 20+26 Gray/- | 46+39 White/-
 7: 0+8 Gray/- | 8+12 White/- | 20+26 Gray/- | 46+54 White/-
 8: 0+11 Cyan/- BOLD | 11+18 Gray/-
 9: 0+8 Gray/- | 8+12 White/- | 20+26 Gray/- | 46+27 White/-
11: 0+84 Gray/-
28: 0+23 Gray/- | 23+25 Yellow/-
29: 0+3 Black/Gray | 10+4 Black/Gray | 23+3 Black/Gray | 36+3 Black/Gray | 46+5 Black/Gray | 58+3 Black/Gray
