src/integration/snapshots/rustclean__integration__screens__disks-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Disks — choose a disk to scan
────────────────────────────────────────────────────────────────────────────────────────────────────
  Name         Mount point FS       Used        Total       Usage
▶ Macintosh HD /           apfs       724.0 GiB   994.0 GiB ██████████████▋       73%
  Backup       /Volumes/Ba exfat        1.8 TiB     2.0 TiB ██████████████████▌   92%  removable






















────────────────────────────────────────────────────────────────────────────────────────────────────

 ↑↓  select   Enter  scan   r  refresh   L  Türkçe   q  quit
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+60 -/DarkGray BOLD | 60+20 Green/DarkGray BOLD | 80+20 -/DarkGray BOLD
 4: 60+20 Red/-
29: 0+4 Black/Gray | 13+7 Black/Gray | 27+3 Black/Gray | 40+3 Black/Gray | 52+3 Black/Gray
