src/integration/snapshots/rustclean__integration__screens__disks-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Diskler — taramak için bir disk seçin
────────────────────────────────────────────────────────────────────────────────────────────────────
  Ad           Bağlama nok FS       Kullanılan  Toplam      Doluluk
▶ Macintosh HD /           apfs       724.0 GiB   994.0 GiB ██████████████▋       %73
  Backup       /Volumes/Ba exfat        1.8 TiB     2.0 TiB ██████████████████▌   %92  çıkarılabilir






















────────────────────────────────────────────────────────────────────────────────────────────────────

 ?  yardım   ↑↓  seç   Enter  tara   r  yenile   L  English   T  tema   q  çık
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 60+20 Red/-
29: 0+3 Black/Gray | 12+4 Black/Gray | 22+7 Black/Gray | 36+3 Black/Gray | 48+3 Black/Gray | 61+3 Black/Gray | 71+3 Black/Gray
