src/integration/snapshots/rustclean__integration__screens__export-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Largest files — /Users/demo  │  17 rows, 8.6 GiB (on disk)
──────────────────────────────────── Date: ██ ≤ 7 days   ██ ≤ 30 days   ██ ≤ 1 year   ██ > 1 year
      Size        Count      Modified         Location
▶ [ ]     3.0 GiB            2025-08-27 12:00 Downloads/Xcode_16.xip
  [ ]     2.3 GiB            2025-02-28 12:00 Movies/holiday-2024.mp4
  [ ]   900.0 MiB            2026-08-22 12:00 Movies/screen-recording.mov
  [ ]   820.0 MiB            2026-06-03 12:00 Projects/api/target/debug/api
  [ ]   610.0 MiB            2026-09-30 12:00 Library/Caches/com.example.browser/cache.db
  [ ]   450.0 MiB            2026-03-15 12:00 Downloads/setup.dmg
  [ ]   ┌ Export ──────────────────────────────────────────────────────────────────────────┐
  [ ]   │                                                                                  │chpad
  [ ]   │ This list will be saved to a file: 17 rows.                                      │
  [ ]   │                                                                                  │pad/stat
  [ ]   │  c   CSV   (for spreadsheets)                                                    │
  [ ]   │  j   JSON  (for scripts)                                                         │
  [ ]   │ Esc   cancel                                                                     │
  [ ]   │                                                                                  │
  [ ]   │ Saved in the working folder, or in your home folder if that is not writable.     │
  [ ]   │ Existing files are never overwritten.                                            │
  [ ]   └──────────────────────────────────────────────────────────────────────────────────┘







────────────────────────────────────────────────────────────────────────────────────────────────────
Enter: open the file's folder
 ?  help   c  CSV   j  JSON   Esc  cancel
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 36+7 White/- BOLD | 43+2 Green/- | 45+12 White/- | 57+2 Cyan/- | 59+13 White/- | 72+2 Yellow/- | 74+12 White/- | 86+2 Red/- | 88+12 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 2+3 Gray/- | 29+16 Red/-
 5: 2+3 Gray/- | 29+16 Yellow/-
 6: 2+3 Gray/- | 29+16 Yellow/-
 7: 2+3 Gray/- | 29+16 Green/-
 8: 2+3 Gray/- | 29+16 Yellow/-
 9: 2+3 Gray/- | 8+1 Cyan/- | 9+8 White/- BOLD | 17+75 Cyan/-
10: 2+3 Gray/- | 8+1 Cyan/- | 91+1 Cyan/-
11: 2+3 Gray/- | 8+1 Cyan/- | 9+44 White/- BOLD | 91+1 Cyan/-
12: 2+3 Gray/- | 8+1 Cyan/- | 91+1 Cyan/-
13: 2+3 Gray/- | 8+1 Cyan/- | 9+4 Black/Gray | 13+26 White/- | 91+1 Cyan/-
14: 2+3 Gray/- | 8+1 Cyan/- | 9+4 Black/Gray | 13+21 White/- | 91+1 Cyan/-
15: 2+3 Gray/- | 8+1 Cyan/- | 9+5 Black/Gray | 14+8 White/- | 91+1 Cyan/-
16: 2+3 Gray/- | 8+1 Cyan/- | 91+1 Cyan/-
17: 2+3 Gray/- | 8+1 Cyan/- | 9+77 Gray/- | 91+1 Cyan/-
18: 2+3 Gray/- | 8+1 Cyan/- | 9+38 Gray/- | 91+1 Cyan/-
19: 2+3 Gray/- | 8+84 Cyan/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 10+3 Black/Gray | 19+3 Black/Gray | 29+5 Black/Gray
