src/integration/snapshots/rustclean__integration__screens__failures-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  /Users/demo  │  8.6 GiB (on disk)  │  17 files  │  sort: size
──────────────────────────────────── Date: ██ ≤ 7 days   ██ ≤ 30 days   ██ ≤ 1 year   ██ > 1 year
   ┌ Items not moved ───────────────────────────────────────────────────────────────────────────┐
▶  │                                                                                            │
   │ ✗ 2 items could not be moved   ·   ✓ 3 items moved (1.2 GiB)                               │
   │                                                                                            │
   │ 1. com.example.locked                                                                      │
   │    /Users/demo/Library/Containers/com.example.locked                                       │
   │    Operation not permitted (os error 1)                                                    │
   │    → macOS did not allow it. The item may be locked (Finder → Get Info → Locked) or in a   │
   │protected location (e.g. Library/Containers). For protected locations, add your terminal app│
   │under System Settings → Privacy & Security → Full Disk Access and reopen the terminal.      │
   │                                                                                            │
   │ 2. gone.zip                                                                                │
   │    /Users/demo/Downloads/gone.zip                                                          │
   │    No such file or directory (os error 2)                                                  │
   │    → The item is no longer there; another program may have deleted or moved it.            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
───└──────────────────────────────────── Esc / Enter: close ────────────────────────────────────┘───
37 items scanned, 1.2 s   ⚠ 2 items inaccessible
 ↑↓  scroll   Esc  close
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 36+7 White/- BOLD | 43+2 Green/- | 45+12 White/- | 57+2 Cyan/- | 59+13 White/- | 72+2 Yellow/- | 74+12 White/- | 86+2 Red/- | 88+12 White/-
 2: 0+3 -/- BOLD | UNDERLINED | 3+1 Red/- | 4+17 White/- BOLD | 21+76 Red/- | 97+3 -/- BOLD | UNDERLINED
 3: 0+3 -/DarkGray BOLD | 3+1 Red/- | 96+1 Red/- | 97+3 -/DarkGray BOLD
 4: 3+1 Red/- | 4+29 Red/- BOLD | 33+32 Green/- | 96+1 Red/-
 5: 3+1 Red/- | 96+1 Red/-
 6: 3+1 Red/- | 4+22 White/- BOLD | 96+1 Red/-
 7: 3+1 Red/- | 4+53 Gray/- | 96+1 Red/-
 8: 3+1 Red/- | 4+40 White/- | 96+1 Red/-
 9: 3+1 Red/- | 4+6 Yellow/- BOLD | 10+83 Yellow/- | 96+1 Red/-
10: 3+1 Red/- | 4+92 Yellow/- | 96+1 Red/-
11: 3+1 Red/- | 4+86 Yellow/- | 96+1 Red/-
12: 3+1 Red/- | 96+1 Red/-
13: 3+1 Red/- | 4+12 White/- BOLD | 96+1 Red/-
14: 3+1 Red/- | 4+34 Gray/- | 96+1 Red/-
15: 3+1 Red/- | 4+42 White/- | 96+1 Red/-
16: 3+1 Red/- | 4+6 Yellow/- BOLD | 10+74 Yellow/- | 96+1 Red/-
17: 3+1 Red/- | 96+1 Red/-
18: 3+1 Red/- | 96+1 Red/-
19: 3+1 Red/- | 96+1 Red/-
20: 3+1 Red/- | 96+1 Red/-
21: 3+1 Red/- | 96+1 Red/-
22: 3+1 Red/- | 96+1 Red/-
23: 3+1 Red/- | 96+1 Red/-
24: 3+1 Red/- | 96+1 Red/-
25: 3+1 Red/- | 96+1 Red/-
26: 3+1 Red/- | 96+1 Red/-
27: 3+37 Red/- | 40+20 Gray/- | 60+37 Red/-
28: 0+23 Gray/- | 23+25 Yellow/-
29: 0+4 Black/Gray | 13+5 Black/Gray
