src/integration/snapshots/rustclean__integration__screens__failures-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  /Users/demo  │  8.6 GiB (diskte)  │  17 dosya  │  sıralama: boyut
─────────────────────────────────────── Tarih: ██ ≤ 7 gün   ██ ≤ 30 gün   ██ ≤ 1 yıl   ██ > 1 yıl
   ┌ Taşınamayan öğeler ────────────────────────────────────────────────────────────────────────┐
▶  │                                                                                            │
   │ ✗ 2 öğe taşınamadı   ·   ✓ 3 öğe taşındı (1.2 GiB)                                         │
   │                                                                                            │
   │ 1. com.example.locked                                                                      │
   │    /Users/demo/Library/Containers/com.example.locked                                       │
   │    Operation not permitted (os error 1)                                                    │
   │    → macOS izin vermedi. Öğe kilitli olabilir (Finder → Bilgi Al → Kilitli) ya da korumalı │
   │      bir konumdadır (ör. Library/Containers). Korumalı konumlar için Sistem Ayarları →     │
   │      Gizlilik ve Güvenlik → Tam Disk Erişimi'nden terminal uygulamanızı ekleyip terminali  │
   │      yeniden açın.                                                                         │
   │                                                                                            │
   │ 2. gone.zip                                                                                │
   │    /Users/demo/Downloads/gone.zip                                                          │
   │    No such file or directory (os error 2)                                                  │
   │    → Öğe artık yerinde değil; başka bir program silmiş ya da taşımış olabilir.             │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
───└──────────────────────────────────── Esc / Enter: kapat ────────────────────────────────────┘───
37 öğe tarandı, 1.2 sn   ⚠ 2 öğeye erişilemedi
 ↑↓  kaydır   Esc  kapat
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 39+8 White/- BOLD | 47+2 Green/- | 49+11 White/- | 60+2 Cyan/- | 62+12 White/- | 74+2 Yellow/- | 76+11 White/- | 87+2 Red/- | 89+11 White/-
 2: 0+3 -/- BOLD | UNDERLINED | 3+1 Red/- | 4+20 White/- BOLD | 24+73 Red/- | 97+3 -/- BOLD | UNDERLINED
 3: 0+3 -/DarkGray BOLD | 3+1 Red/- | 96+1 Red/- | 97+3 -/DarkGray BOLD
 4: 3+1 Red/- | 4+19 Red/- BOLD | 23+32 Green/- | 96+1 Red/-
 5: 3+1 Red/- | 96+1 Red/-
 6: 3+1 Red/- | 4+22 White/- BOLD | 96+1 Red/-
 7: 3+1 Red/- | 4+53 Gray/- | 96+1 Red/-
 8: 3+1 Red/- | 4+40 White/- | 96+1 Red/-
 9: 3+1 Red/- | 4+6 Yellow/- BOLD | 10+85 Yellow/- | 96+1 Red/-
10: 3+1 Red/- | 4+87 Yellow/- | 96+1 Red/-
11: 3+1 Red/- | 4+90 Yellow/- | 96+1 Red/-
12: 3+1 Red/- | 4+19 Yellow/- | 96+1 Red/-
13: 3+1 Red/- | 96+1 Red/-
14: 3+1 Red/- | 4+12 White/- BOLD | 96+1 Red/-
15: 3+1 Red/- | 4+34 Gray/- | 96+1 Red/-
16: 3+1 Red/- | 4+42 White/- | 96+1 Red/-
17: 3+1 Red/- | 4+6 Yellow/- BOLD | 10+73 Yellow/- | 96+1 Red/-
18: 3+1 Red/- | 96+1 Red/-
19: 3+1 Red/- | 96+1 Red/-
20: 3+1 Red/- | 96+1 Red/-
21: 3+1 Red/- | 96+1 Red/-
22: 3+1 Red/- | 96+1 Red/-
23: 3+1 Red/- | 96+1 Red/-
24: 3+1 Red/- | 96+1 Red/-
25: 3+1 Red/- | 96+1 Red/-
26: 3+1 Red/- | 96+1 Red/-
27: 3+37 Red/- | 40+20 Gray/- | 60+37 Red/-
28: 0+22 Gray/- | 22+24 Yellow/-
29: 0+4 Black/Gray | 13+5 Black/Gray
