src/integration/snapshots/rustclean__integration__screens__help-disks-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Diskler — taramak için bir disk seçin
────────┌ Tuşlar ──────────────────────────────────────────────────────────────────────────┐────────
  Ad    │▶ Bu ekran: Disk listesi                                                          │
▶ Macint│ ↑↓  j k       disk seç                                                           │
  Backup│ Enter  →  l   tara                                                               │ılabilir
        │ r             listeyi yenile                                                     │
        │ Esc           çık                                                                │
        │                                                                                  │
        │Her ekranda                                                                       │
        │ ?             bu yardım                                                          │
        │ L             Türkçe ↔ English                                                   │
        │ T             tema: koyu, açık, renk körü                                        │
        │ q  Ctrl-C     çık                                                                │
        │                                                                                  │
        │Klasör listesi                                                                    │
        │ ↑↓  j k       gez                                                                │
        │ PgUp PgDn     sayfa sayfa                                                        │
        │ Home End  g G ilk / son satır                                                    │
        │ Enter  →  l   klasöre gir                                                        │
        │ ⌫  ←  h  Esc  üst klasör                                                         │
        │ s             sırala: boyut, ad, dosya sayısı, tarih                             │
        │ a             görünen / diskteki boyut                                           │
        │ t             harita görünümü                                                    │
        │ /             ada göre ara (* ve ? joker karakter)                               │
        │ i             bu klasörün özeti                                                  │
        │ m             raporlar menüsü                                                    │
        │ o             listeyi CSV / JSON dosyasına kaydet                                │
────────│ Space         sepete ekle / çıkar                                                │────────
        └───────────────────── ↑↓ PgUp PgDn: kaydır · Esc / ?: kapat ──────────────────────┘
 ?  yardım   ↑↓  seç   Enter  tara   r  yenile   L  English   T  tema   q  çık
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 8+1 Cyan/- | 9+8 White/- BOLD | 17+75 Cyan/-
 2: 0+8 -/- BOLD | UNDERLINED | 8+1 Cyan/- | 9+24 Cyan/- BOLD | 91+1 Cyan/- | 92+8 -/- BOLD | UNDERLINED
 3: 0+8 White/Indexed(238) BOLD | 8+16 Cyan/- | 24+8 White/- | 91+1 Cyan/- | 92+8 White/Indexed(238) BOLD
 4: 8+16 Cyan/- | 24+4 White/- | 91+1 Cyan/-
 5: 8+16 Cyan/- | 24+14 White/- | 91+1 Cyan/-
 6: 8+16 Cyan/- | 24+3 White/- | 91+1 Cyan/-
 7: 8+1 Cyan/- | 91+1 Cyan/-
 8: 8+1 Cyan/- | 9+11 White/- BOLD | 91+1 Cyan/-
 9: 8+16 Cyan/- | 24+9 White/- | 91+1 Cyan/-
10: 8+16 Cyan/- | 24+16 White/- | 91+1 Cyan/-
11: 8+16 Cyan/- | 24+27 White/- | 91+1 Cyan/-
12: 8+16 Cyan/- | 24+3 White/- | 91+1 Cyan/-
13: 8+1 Cyan/- | 91+1 Cyan/-
14: 8+1 Cyan/- | 9+14 White/- BOLD | 91+1 Cyan/-
15: 8+16 Cyan/- | 24+3 White/- | 91+1 Cyan/-
16: 8+16 Cyan/- | 24+11 White/- | 91+1 Cyan/-
17: 8+16 Cyan/- | 24+15 White/- | 91+1 Cyan/-
18: 8+16 Cyan/- | 24+11 White/- | 91+1 Cyan/-
19: 8+16 Cyan/- | 24+10 White/- | 91+1 Cyan/-
20: 8+16 Cyan/- | 24+38 White/- | 91+1 Cyan/-
21: 8+16 Cyan/- | 24+24 White/- | 91+1 Cyan/-
22: 8+16 Cyan/- | 24+15 White/- | 91+1 Cyan/-
23: 8+16 Cyan/- | 24+36 White/- | 91+1 Cyan/-
24: 8+16 Cyan/- | 24+17 White/- | 91+1 Cyan/-
25: 8+16 Cyan/- | 24+15 White/- | 91+1 Cyan/-
26: 8+16 Cyan/- | 24+35 White/- | 91+1 Cyan/-
27: 8+16 Cyan/- | 24+19 White/- | 91+1 Cyan/-
28: 8+22 Cyan/- | 30+39 Gray/- | 69+23 Cyan/-
29: 0+3 Black/Gray | 12+4 Black/Gray | 22+7 Black/Gray | 36+3 Black/Gray | 48+3 Black/Gray | 61+3 Black/Gray | 71+3 Black/Gray
